2007-02-23  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region): moved
	lanczos code into it's own function to improve readability.

2007-02-23  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.[ch]: do less tile lock and release
	operations by reusing the last locked tile if possible. Allow to
	call pixel_surround_lock() several times without unlocking.

	* app/core/gimp-transform-region.c: don't unlock the PixelSurround
	so that the locked tile can be reused. Yields about 30% speedup
	for transformations.

2007-02-23  Tor Lillqvist  <tml@novell.com>

	* configure.in: Remove space after the -L in what we add to
	LDFLAGS for DirectInput.

2007-02-23  Tor Lillqvist  <tml@novell.com>

	* plug-ins/common/psd.c: Inspired by mail from a user, improve
	some error messages to be more informative. Use g_message()
	instead of plain printf() in a couple of places in situations that
	probably are commonly encountered. (There are probably still more
	of such printf() calls in the code.) gimp_quit() doesn't return,
	not need to do anything else after calling it.

2007-02-23  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c (pixel_surround_lock): code cleanup.

2007-02-23  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c: allocate the PixelSurround struct and
	its buffer in one chunk.

2007-02-23  Sven Neumann  <sven@gimp.org>

	* app/base/base-types.h
	* app/base/pixel-surround.[ch]: hide PixelSurround struct and
	cleaned up the PixelSurround API.

	* app/core/gimp-transform-region.c: changed accordingly. Also
	sprinkled some const qualifiers.

2007-02-22  Sven Neumann  <sven@gimp.org>

	* app/base/tile.[ch]: made tile_ref_count a static variable and
	added a function to access it.  Declared other (unused) global
	counters as static variables and moved them into #ifdefs.

	* app/base/tile-swap.c: use the function instead of declaring
	tile_ref_count as extern.

	* app/base/tile-manager.c