@@ -1,3 +1,9 @@
+2007-02-24  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimp-transform-region.c (gimp_transform_region):
+	moved nearest-neighbor code to it's own function to improve
+	performance and readability.
+
 2007-02-23  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimp-transform-region.c (gimp_transform_region): moved
